--- a/src/components/Header/HeaderNavigate/HeaderNavigate.css
+++ b/src/components/Header/HeaderNavigate/HeaderNavigate.css
@@ -69,6 +69,7 @@
     font-style: normal;
     font-weight: 500;
     line-height: 18px;
+    text-decoration: none;
 }
 
 .header__nav-link:hover {
