--- a/src/components/ErrorMessage/ErrorMessage.css
+++ b/src/components/ErrorMessage/ErrorMessage.css
@@ -6,3 +6,12 @@
     position: absolute;
     top: 17px;
 }
+
+.error-message_type_register {
+    top: 67px;
+    font-size: 10px;
+}
+
+.error-message_type_login {
+    top: 67px;
+}
